# mingw64-mac-native

./: .gitignore  CMAKE_USAGE.md  CMakeLists.txt  README.md  main.cpp  mingw64-toolchain.cmake
